Payment / Crypto Coin / Fixed the alignment issue of logo

--- a/src/styles/sass/page/_payment.scss
+++ b/src/styles/sass/page/_payment.scss
@@ -356,6 +356,7 @@
 }
 
 .css-4ljt47-MenuList {
+    text-align: center !important;
     padding-top: 0px !important;
     padding-bottom: 0px !important;
 }
@@ -372,5 +373,5 @@
 }
 
 .css-qc6sy-singleValue {
-    margin: auto;
+    margin: auto !important;
 }
